feat: 调整文本分词数量，从200改为不设长度限制

--- a/preprocessing/data_preprocess.ipynb
+++ b/preprocessing/data_preprocess.ipynb
@@ -17,13 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\lxy\\AppData\\Local\\Temp\\jieba.cache\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..\\dataset\\题目一\\健康\\0.xml\n",
+      "..\\dataset\\题目一\\健康\\0.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading model cost 0.770 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "..\\dataset\\题目一\\健康\\1.xml\n",
       "..\\dataset\\题目一\\健康\\2.xml\n",
       "..\\dataset\\题目一\\健康\\3.xml\n",
@@ -66,7 +88,8 @@
     "                content = contentList[i].get_text()\n",
     "                text = (contenttitle + content).replace('\\n', '').replace(' ', '')\n",
     "                text = re.sub(r'[^\\u4e00-\\u9fa5]+', '', text)\n",
-    "                text_cut = ' '.join(list(jieba.cut(text))[:200])\n",
+    "                # text_cut = ' '.join(list(jieba.cut(text))[:200])\n",
+    "                text_cut = ' '.join(jieba.cut(text))\n",
     "                text_set.append(text_cut)\n",
     "        # 遍历完一个文件夹，输出该标签下的分词文件\n",
     "        class_name = path.split('\\\\')[-1]\n",
