--- a/method/word2vec_CNN.ipynb
+++ b/method/word2vec_CNN.ipynb
@@ -256,7 +256,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "from keras.callbacks import TensorBoard, EarlyStopping\n",
+    "from keras.callbacks import TensorBoard, EarlyStopping, ModelCheckpoint\n",
     "from keras import backend as K\n",
     "\n",
     "\n",
@@ -283,6 +283,7 @@
     "my_callbacks = [\n",
     "    EarlyStopping(patience=5),\n",
     "    TensorBoard(log_dir='./logs'),\n",
+    "    ModelCheckpoint('word2vec_LSTM.h5', monitor='val_loss', save_best_only=True, mode='auto'),\n",
     "]"
    ],
    "metadata": {
